fix: spacing for cards

--- a/src/components/table.scss
+++ b/src/components/table.scss
@@ -7,7 +7,7 @@
         border-radius: 4px;
 
         td:first-child {
-            padding-left: 1rem;
+            padding-left: 0.5rem;
             border-top-left-radius: 4px;
             border-bottom-left-radius: 4px;
             border-left: 1px solid $border-color;
